--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="list__content">
       <p>Tarea #1</p>
       <div class="list__buttons">
-        <!-- <i class="fa-solid fa-rotate-left"></i> -->
         <i class="fa-solid fa-check"></i>
+        <i class="fa-solid fa-pen"></i>
         <i class="fa-solid fa-x"></i>
       </div>
     </div>
